--- a/order.html
+++ b/order.html
@@ -5,15 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đặt hàng</title>
     <style>
+        :root {
+            --color-bg: #f0f2f5;
+            --color-card: #ffffff;
+            --color-primary: #007bff;
+            --color-success: #28a745;
+            --color-text: #333333;
+            --color-muted: #555555;
+            --color-border: #dddddd;
+        }
+        html, body {
+            margin: 0;
+        }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
+            background-color: var(--color-bg);
             padding: 20px;
             display: flex;
             justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
         }
         .order-container {
-            background-color: white;
+            background-color: var(--color-card);
             width: 100%;
             max-width: 600px;
             padding: 30px;
@@ -21,18 +35,23 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
         h2 {
-            color: #333;
+            color: var(--color-text);
             margin-top: 0;
-            border-bottom: 2px solid #007bff;
+            border-bottom: 2px solid var(--color-primary);
             padding-bottom: 10px;
             display: inline-block;
         }
         .form-section {
             margin-bottom: 20px;
         }
-        .form-section h3 {
+        fieldset.form-section {
+            border: 0;
+            padding: 0;
+            margin: 0 0 20px;
+        }
+        legend {
             font-size: 1.1rem;
-            color: #555;
+            color: var(--color-muted);
             margin-bottom: 15px;
         }
         .form-group {
@@ -41,16 +60,21 @@
         label {
             display: block;
             margin-bottom: 5px;
-            color: #333;
+            color: var(--color-text);
             font-weight: 500;
         }
         input, textarea, select {
             width: 100%;
             padding: 10px;
-            border: 1px solid #ddd;
+            border: 1px solid var(--color-border);
             border-radius: 4px;
             box-sizing: border-box;
             font-family: inherit;
+        }
+        input:focus-visible, textarea:focus-visible, select:focus-visible {
+            outline: 3px solid var(--color-primary);
+            outline-offset: 2px;
+            border-color: var(--color-primary);
         }
         textarea {
             resize: vertical;
@@ -62,25 +86,26 @@
             border-radius: 4px;
             margin-bottom: 20px;
         }
-        .summary-row {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            color: #555;
+        .summary {
+            display: grid;
+            grid-template-columns: 1fr auto;
+            row-gap: 10px;
+            column-gap: 16px;
+            color: var(--color-muted);
         }
         .summary-total {
             font-weight: bold;
-            color: #333;
-            font-size: 1.2rem;
-            border-top: 1px solid #ddd;
+            color: var(--color-text);
+            font-size: 1.1rem;
+            border-top: 1px solid var(--color-border);
             padding-top: 10px;
             margin-top: 10px;
         }
         button.confirm-btn {
             width: 100%;
             padding: 15px;
-            background-color: #28a745;
-            color: white;
+            background-color: var(--color-success);
+            color: #ffffff;
             border: none;
             border-radius: 5px;
             font-size: 1.1rem;
@@ -91,6 +116,10 @@
         button.confirm-btn:hover {
             background-color: #218838;
         }
+        button.confirm-btn:focus-visible {
+            outline: 3px solid var(--color-success);
+            outline-offset: 2px;
+        }
     </style>
 </head>
 <body>
@@ -98,48 +127,44 @@
         <h2>Thông tin giao hàng</h2>
         
         <form action="#" method="POST">
-            <div class="form-section">
-                <h3>Người nhận</h3>
+            <fieldset class="form-section">
+                <legend>Người nhận</legend>
                 <div class="form-group">
                     <label for="name">Họ và tên</label>
-                    <input type="text" id="name" name="name" value="Nguyễn Văn A" required>
+                    <input type="text" id="name" name="name" value="Nguyễn Văn A" autocomplete="name" autocapitalize="words" required>
                 </div>
                 <div class="form-group">
                     <label for="phone">Số điện thoại</label>
-                    <input type="tel" id="phone" name="phone" value="0901234567" required>
+                    <input type="tel" id="phone" name="phone" value="0901234567" autocomplete="tel" inputmode="numeric" pattern="[0-9]{9,11}" required>
                 </div>
-            </div>
+            </fieldset>
 
-            <div class="form-section">
-                <h3>Địa chỉ nhận hàng</h3>
+            <fieldset class="form-section">
+                <legend>Địa chỉ nhận hàng</legend>
                 <div class="form-group">
                     <label for="city">Tỉnh / Thành phố</label>
-                    <select id="city">
-                        <option>Hồ Chí Minh</option>
-                        <option>Hà Nội</option>
-                        <option>Đà Nẵng</option>
+                    <select id="city" name="city" autocomplete="address-level1" required>
+                        <option value="HoChiMinh">Hồ Chí Minh</option>
+                        <option value="HaNoi">Hà Nội</option>
+                        <option value="DaNang">Đà Nẵng</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="address">Địa chỉ cụ thể</label>
-                    <textarea id="address" placeholder="Số nhà, tên đường, phường/xã...">123 Đường ABC, Phường XYZ, Quận 1</textarea>
+                    <textarea id="address" name="address" placeholder="Số nhà, tên đường, phường/xã..." autocomplete="street-address" required>123 Đường ABC, Phường XYZ, Quận 1</textarea>
                 </div>
-            </div>
+            </fieldset>
 
             <div class="order-summary">
                 <h3>Tóm tắt đơn hàng</h3>
-                <div class="summary-row">
-                    <span>Tạm tính:</span>
-                    <span>1.550.000₫</span>
-                </div>
-                <div class="summary-row">
-                    <span>Phí vận chuyển:</span>
-                    <span>30.000₫</span>
-                </div>
-                <div class="summary-row summary-total">
-                    <span>Tổng thanh toán:</span>
-                    <span>1.580.000₫</span>
-                </div>
+                <dl class="summary">
+                    <dt>Tạm tính:</dt>
+                    <dd>1.550.000₫</dd>
+                    <dt>Phí vận chuyển:</dt>
+                    <dd>30.000₫</dd>
+                    <dt class="summary-total">Tổng thanh toán:</dt>
+                    <dd class="summary-total">1.580.000₫</dd>
+                </dl>
             </div>
 
             <button type="submit" class="confirm-btn">Xác nhận đặt hàng</button>
