--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang ca nhan</title>
+    <title>Trang cá nhân của bạn</title>
     <style>
         body {
             font-family: Arial, sans-serif;
